@@ -77,6 +77,59 @@ static GOptionEntry  entries[] = {
 };
 
 static void
+sanity_check_option_values (TrackerConfig *config)
+{
+	g_message ("General options:");
+	g_message ("  Verbosity  ............................  %d", 
+		   tracker_config_get_verbosity (config));
+ 	g_message ("  Low memory mode  ......................  %s", 
+		   tracker_config_get_low_memory_mode (config) ? "yes" : "no");
+
+	g_message ("Indexer options:");
+	g_message ("  Throttle level  .......................  %d",
+		   tracker_config_get_throttle (config));
+ 	g_message ("  File content indexing enabled  ........  %s", 
+		   tracker_config_get_enable_content_indexing (config) ? "yes" : "no");
+	g_message ("  Thumbnail indexing enabled  ...........  %s", 
+		   tracker_config_get_enable_thumbnails (config) ? "yes" : "no");
+	g_message ("  Indexer language code  ................  %s", 
+		   tracker_config_get_language (config));
+	g_message ("  Stemmer enabled  ......................  %s", 
+		   tracker_config_get_enable_stemmer (config) ? "yes" : "no");
+	g_message ("  Fast merges enabled  ..................  %s", 
+		   tracker_config_get_fast_merges (config) ? "yes" : "no");
+	g_message ("  Disable indexing on battery  ..........  %s (initially = %s)", 
+		   tracker_config_get_disable_indexing_on_battery (config) ? "yes" : "no",
+		   tracker_config_get_disable_indexing_on_battery_init (config) ? "yes" : "no");
+
+	if (tracker_config_get_low_disk_space_limit (config) == -1) { 
+		g_message ("  Low disk space limit  .................  Disabled");
+	} else {
+		g_message ("  Low disk space limit  .................  %d%%",
+			   tracker_config_get_low_disk_space_limit (config));
+	}
+
+	g_message ("  Minimum index word length  ............  %d",
+		   tracker_config_get_min_word_length (config));
+	g_message ("  Maximum index word length  ............  %d",
+		   tracker_config_get_max_word_length (config));
+	g_message ("  Maximum text to index  ................  %d",
+		   tracker_config_get_max_text_to_index (config));
+	g_message ("  Maximum words to index  ...............  %d",
+		   tracker_config_get_max_words_to_index (config));
+	g_message ("  Maximum bucket count  .................  %d",
+		   tracker_config_get_max_bucket_count (config));
+	g_message ("  Minimum bucket count  .................  %d",
+		   tracker_config_get_min_bucket_count (config));
+	g_message ("  Divisions  ............................  %d",
+		   tracker_config_get_divisions (config));
+	g_message ("  Padding  ..............................  %d",
+		   tracker_config_get_padding (config));
+	g_message ("  Optimization sweep count  .............  %d",
+		   tracker_config_get_optimization_sweep_count (config));
+}
+
+static void
 signal_handler (gint signo)
 {
 	static gboolean in_loop = FALSE;
@@ -272,6 +325,8 @@ main (gint argc, gchar *argv[])
         if (!tracker_dbus_init ()) {
                 return EXIT_FAILURE;
         }
+
+	sanity_check_option_values (config);
 
 	initialize_indexer ();
 
